Finalized Ollama RAG notebook

--- a/ollama-rag.ipynb
+++ b/ollama-rag.ipynb
@@ -60,20 +60,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Loading PDF\n",
-      "INFO:root:Loaded 78 pages\n",
       "INFO:root:Splitting text\n",
-      "INFO:root:Split into 255 documents\n"
+      "INFO:root:Split into 80 documents\n"
      ]
     }
    ],
    "source": [
     "logging.info(\"Splitting text\")\n",
     "text_splitter = CharacterTextSplitter(\n",
-    "    separator=\" \",\n",
-    "    is_separator_regex=True,\n",
-    "    chunk_size=1000,\n",
-    "    chunk_overlap=100,\n",
+    "    separator=\".\",\n",
+    "    is_separator_regex=False,\n",
+    "    # chunk_size=1000,\n",
+    "    # chunk_overlap=10,\n",
     ")\n",
     "docs = text_splitter.split_documents(pages)\n",
     "logging.info(f\"Split into {len(docs)} documents\")\n"
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +94,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Embedding text\n",
-      "INFO:root:Embedded 510 documents\n"
+      "INFO:root:Embedded 80 documents\n"
      ]
     }
    ],
@@ -122,121 +120,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TOP result: Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 36 of 78  2024-09-15 \n",
+      "© International Software Testing Qualifications Board \n",
+      "• Fixing and reporting. For every defect, a defect report should be created so that corrective \n",
+      "actions can be followed up. Once the exit criteria are reached, the work product can be accepted. \n",
+      "The review results are reported. \n",
+      "3.2.3. Roles and Responsibilities in Reviews \n",
+      "Reviews involve various stakeholders, who may take on several roles. The principal roles and their \n",
+      "responsibilities are: \n",
+      "• Manager – decides what is to be reviewed and provides resources, such as staff and time for the \n",
+      "review \n",
+      "• Author – creates and fixes the work product under review \n",
+      "• Moderator (also known as the facilitator) – ensures the effective running of review meetings, \n",
+      "including mediation, time management, and a safe review environment in which everyone can \n",
+      "speak freely \n",
+      "• Scribe (also known as recorder) – collates anomalies from reviewers and records review \n",
+      "information, such as decisions and new anomalies found during the review meeting \n",
+      "• Reviewer – performs reviews. A reviewer may be someone working on the project, a subject \n",
+      "matter expert, or any other stakeholder \n",
+      "• Review leader – takes overall responsibility for the review such as deciding who will be involved, \n",
+      "and organizing when and where the review will take place \n",
+      "Other, more detailed roles are possible, as described in the ISO/IEC 20246 standard . \n",
+      "3.2.4. Review Types \n",
+      "There exist many review types ranging from informal reviews to formal reviews . The required level of \n",
+      "formality depends on factors such as the SDLC being followed, the maturity of the development process, \n",
+      "the criticality and complexity of the work product being reviewed, legal or regulatory requirements, and \n",
+      "the need for an audit trail. The same work product can be reviewed with different review types, e.g ., first \n",
+      "an informal one and later a more formal one. \n",
+      "Selecting the right review type is key to achieving the required review objectives  (see section 3.2.5). The \n",
+      "selection is not only based on the objectives, but also on factors such as the project needs, available \n",
+      "resources, work product type and risks, business domain, and company culture.  \n",
+      "Some commonly used review types are: \n",
+      "• Informal review. Informal reviews do not follow a defined process and do not require a formal \n",
+      "documented output. The main objective is detecting anomalies. \n",
+      "• Walkthrough. A walkthrough, which is led by the author, can serve many objectives, such as \n",
+      "evaluating quality and building confidence in the work product, educating reviewers, gaining \n",
+      "consensus, generating new ideas, motivating and enabling authors to improve and detecting \n",
+      "anomalies. Reviewers might perform an individual review before the walkthrough, but this is not \n",
+      "required.\n",
       "\n",
-      "# 0 ##########################\n",
-      "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 382.41259765625\n",
-      "Length: 996\n",
+      "\n",
+      "\n",
+      "# 0 #######################\n",
+      "Document {'page': 35, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
+      "Score: 494.0668029785156\n",
+      "Length: 2819\n",
       "Content:\n",
       "--------------------------\n",
-      "coverage items are the equivalence partitions. To achieve 100% coverage with this test \n",
-      "technique, t...\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 36 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
       "##########################\n",
       "\n",
       "\n",
-      "# 1 ##########################\n",
-      "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 382.41259765625\n",
-      "Length: 996\n",
+      "# 1 #######################\n",
+      "Document {'page': 34, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
+      "Score: 492.8382263183594\n",
+      "Length: 3227\n",
       "Content:\n",
       "--------------------------\n",
-      "coverage items are the equivalence partitions. To achieve 100% coverage with this test \n",
-      "technique, t...\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 35 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
       "##########################\n",
       "\n",
       "\n",
-      "# 2 ##########################\n",
-      "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 367.7126770019531\n",
-      "Length: 471\n",
-      "Content:\n",
-      "--------------------------\n",
-      "exercised, divided by the total number of identified \n",
-      "boundary values and their neighbors, and is ex...\n",
-      "##########################\n",
-      "\n",
-      "\n",
-      "# 3 ##########################\n",
-      "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 367.7126770019531\n",
-      "Length: 471\n",
-      "Content:\n",
-      "--------------------------\n",
-      "exercised, divided by the total number of identified \n",
-      "boundary values and their neighbors, and is ex...\n",
-      "##########################\n",
-      "\n",
-      "\n",
-      "# 4 ##########################\n",
-      "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 362.3782653808594\n",
-      "Length: 997\n",
-      "Content:\n",
-      "--------------------------\n",
-      "2002, Myers 2011), for each boundary value there are two coverage items : this \n",
-      "boundary value and i...\n",
-      "##########################\n",
-      "\n",
-      "\n",
-      "# 5 ##########################\n",
-      "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 362.3782653808594\n",
-      "Length: 997\n",
-      "Content:\n",
-      "--------------------------\n",
-      "2002, Myers 2011), for each boundary value there are two coverage items : this \n",
-      "boundary value and i...\n",
-      "##########################\n",
-      "\n",
-      "\n",
-      "# 6 ##########################\n",
+      "# 2 #######################\n",
       "Document {'page': 63, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 361.28485107421875\n",
-      "Length: 403\n",
+      "Score: 492.6484375\n",
+      "Length: 2213\n",
       "Content:\n",
       "--------------------------\n",
-      "prioritization” (should refer to a procedure, technique, process, algorithm etc.). \n",
-      "• “Prepare a def...\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 64 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
       "##########################\n",
       "\n",
       "\n",
-      "# 7 ##########################\n",
-      "Document {'page': 63, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 361.28485107421875\n",
-      "Length: 403\n",
+      "# 3 #######################\n",
+      "Document {'page': 18, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
+      "Score: 484.396240234375\n",
+      "Length: 3816\n",
       "Content:\n",
       "--------------------------\n",
-      "prioritization” (should refer to a procedure, technique, process, algorithm etc.). \n",
-      "• “Prepare a def...\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 19 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
       "##########################\n",
       "\n",
       "\n",
-      "# 8 ##########################\n",
+      "# 4 #######################\n",
+      "Document {'page': 51, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
+      "Score: 480.30078125\n",
+      "Length: 2627\n",
+      "Content:\n",
+      "--------------------------\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 52 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
+      "##########################\n",
+      "\n",
+      "\n",
+      "# 5 #######################\n",
+      "Document {'page': 16, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
+      "Score: 476.87969970703125\n",
+      "Length: 3327\n",
+      "Content:\n",
+      "--------------------------\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 17 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
+      "##########################\n",
+      "\n",
+      "\n",
+      "# 6 #######################\n",
+      "Document {'page': 61, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
+      "Score: 475.9128112792969\n",
+      "Length: 2705\n",
+      "Content:\n",
+      "--------------------------\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 62 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
+      "##########################\n",
+      "\n",
+      "\n",
+      "# 7 #######################\n",
+      "Document {'page': 50, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
+      "Score: 470.4063415527344\n",
+      "Length: 3603\n",
+      "Content:\n",
+      "--------------------------\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 51 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
+      "##########################\n",
+      "\n",
+      "\n",
+      "# 8 #######################\n",
       "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 270.7782897949219\n",
-      "Length: 998\n",
+      "Score: 412.81109619140625\n",
+      "Length: 345\n",
       "Content:\n",
       "--------------------------\n",
-      "4.2.2. Boundary Value Analysis \n",
-      "Boundary Value Analysis (BVA) is a test technique based on exercisin...\n",
+      "3-value BVA is more rigorous than 2-value BVA as it may detect defects overlooked by 2-value BVA. Fo...\n",
       "##########################\n",
       "\n",
       "\n",
-      "# 9 ##########################\n",
+      "# 9 #######################\n",
       "Document {'page': 39, 'source': './ISTQB_CTFL_Syllabus_v4.0.1.pdf'}:\n",
-      "Score: 270.7782897949219\n",
-      "Length: 998\n",
+      "Score: 370.4735107421875\n",
+      "Length: 3834\n",
       "Content:\n",
       "--------------------------\n",
-      "4.2.2. Boundary Value Analysis \n",
-      "Boundary Value Analysis (BVA) is a test technique based on exercisin...\n",
+      "Certified Tester \n",
+      "Foundation Level \n",
+      " \n",
+      "  \n",
+      " \n",
+      "v4.0.1 Page 40 of 78  2024-09-15 \n",
+      "© International Softwar...\n",
       "##########################\n",
       "\n"
      ]
@@ -248,9 +335,11 @@
     "# sort by score descending\n",
     "docs = sorted(docs, key=lambda x: x[1], reverse=True)\n",
     "\n",
+    "print(f\"TOP result: {docs[0][0].page_content}\\n\\n\")\n",
+    "\n",
     "for i, (doc, score) in enumerate(docs):\n",
     "    print(f\"\"\"\n",
-    "# {i} ##########################\n",
+    "# {i} #######################\n",
     "Document {doc.metadata}:\n",
     "Score: {score}\n",
     "Length: {len(doc.page_content)}\n",
